set(TOPOLOGY_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(TOPOLOGY_GENERATED_HEADER "${TOPOLOGY_DIR}/Push2Topology.h")
set(TOPOLOGY_SOURCE_JSON "${TOPOLOGY_DIR}/Push2Topology.json")

#message( "TOPOLOGY_CODE_GEN_TOOL: "${TOPOLOGY_CODE_GEN_TOOL} )

add_custom_command(
    OUTPUT ${TOPOLOGY_GENERATED_HEADER}
    COMMAND python ${TOPOLOGY_CODE_GEN_TOOL} ${TOPOLOGY_SOURCE_JSON}
    WORKING_DIRECTORY ${TOPOLOGY_DIR}
    COMMENT "Generating Widget-Topology header"
    DEPENDS ${TOPOLOGY_SOURCE_JSON})

#add_custom_target(generateTopologyHeader DEPENDS "${TOPOLOGY_GENERATED_HEADER}" "${TOPOLOGY_CODE_GEN_TOOL}")

set(TARGET_NAME "Push2DeviceTopology")

add_library(${TARGET_NAME} INTERFACE)
target_include_directories(${TARGET_NAME}
    INTERFACE
        "$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>"
        "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}>"
)
target_link_libraries(${TARGET_NAME}
    INTERFACE FrontPanelIO::FpBase
    INTERFACE FrontPanelIO::FpGfx
)
#add_dependencies(${TARGET_NAME} generateTopologyHeader)

set_target_properties(${TARGET_NAME} PROPERTIES
    PUBLIC_HEADER "${TOPOLOGY_GENERATED_HEADER}"
)

install(TARGETS ${TARGET_NAME}  EXPORT ${PROJECT_NAME}-targets
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
)
